--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,4 +43,11 @@
   .home-btn:hover {
     transform: scale(1.1);
   }
+
+  body, html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
   
