made some chnages for errors

--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -30,6 +30,7 @@
   .login-btn {
     background-color: #4CAF50;
     color: white;
+    
   }
   
   .register-btn {
@@ -42,3 +43,21 @@
     transform: scale(1.1);
   }
   
+  .email-input {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    border: none;
+    width: 300px;
+  }
+  .password-input {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    border: none;
+    width: 300px;
+  } 
+  .register-link {
+    color: rgb(33, 2, 46);
+    text-decoration: none;
+  } 
